eksup/tests/snapshots/e2e__version_skew_text.snap
---
source: eksup/tests/e2e.rs
expression: output
---
┌────────┬────┬────────┬───────┬───────────────┬──────┐
│ CHECK  │    │ NAME   │ NODE  │ CONTROL PLANE │ SKEW │
├────────┼────┼────────┼───────┼───────────────┼──────┤
│ K8S001 │ ⚠️ │ node-1 │ v1.28 │ v1.30         │ +2   │
│ K8S001 │ ❌ │ node-2 │ v1.27 │ v1.30         │ +3   │
└────────┴────┴────────┴───────┴───────────────┴──────┘
