eksup/tests/snapshots/e2e__workload_issues_json.snap
---
source: eksup/tests/e2e.rs
expression: output
---
{
  "cluster": {
    "cluster_health": []
  },
  "subnets": {
    "control_plane_ips": [],
    "pod_ips": []
  },
  "data_plane": {
    "eks_managed_nodegroup_health": [],
    "eks_managed_nodegroup_update": [],
    "self_managed_nodegroup_update": [],
    "al2_ami_deprecation": [],
    "node_ips": [],
    "eks_managed_nodegroups": [],
    "self_managed_nodegroups": [],
    "fargate_profiles": []
  },
  "addons": {
    "version_compatibility": [],
    "health": []
  },
  "kubernetes": {
    "version_skew": [],
    "min_replicas": [
      {
        "finding": {
          "code": "K8S002",
          "symbol": "❌",
          "remediation": "Required"
        },
        "resource": {
          "name": "web",
          "namespace": "default",
          "kind": "Deployment"
        },
        "replicas": 1
      }
    ],
    "min_ready_seconds": [
      {
        "finding": {
          "code": "K8S003",
          "symbol": "⚠️",
          "remediation": "Recommended"
        },
        "resource": {
          "name": "web",
          "namespace": "default",
          "kind": "Deployment"
        },
        "seconds": 0
      },
      {
        "finding": {
          "code": "K8S003",
          "symbol": "⚠️",
          "remediation": "Recommended"
        },
        "resource": {
          "name": "api",
          "namespace": "backend",
          "kind": "Deployment"
        },
        "seconds": 0
      }
    ],
    "readiness_probe": [
      {
        "finding": {
          "code": "K8S006",
          "symbol": "❌",
          "remediation": "Required"
        },
        "resource": {
          "name": "web",
          "namespace": "default",
          "kind": "Deployment"
        },
        "readiness_probe": false
      },
      {
        "finding": {
          "code": "K8S006",
          "symbol": "❌",
          "remediation": "Required"
        },
        "resource": {
          "name": "api",
          "namespace": "backend",
          "kind": "Deployment"
        },
        "readiness_probe": false
      }
    ],
    "pod_topology_distribution": [
      {
        "finding": {
          "code": "K8S005",
          "symbol": "❌",
          "remediation": "Required"
        },
        "resource": {
          "name": "web",
          "namespace": "default",
          "kind": "Deployment"
        },
        "anti_affinity": false,
        "topology_spread_constraints": false
      },
      {
        "finding": {
          "code": "K8S005",
          "symbol": "❌",
          "remediation": "Required"
        },
        "resource": {
          "name": "api",
          "namespace": "backend",
          "kind": "Deployment"
        },
        "anti_affinity": false,
        "topology_spread_constraints": false
      }
    ],
    "termination_grace_period": [],
    "docker_socket": [],
    "kube_proxy_version_skew": [],
    "kube_proxy_ipvs_mode": [],
    "ingress_nginx_retirement": [],
    "pod_disruption_budgets": [
      {
        "finding": {
          "code": "K8S004",
          "symbol": "⚠️",
          "remediation": "Recommended"
        },
        "resource": {
          "name": "api",
          "namespace": "backend",
          "kind": "Deployment"
        },
        "has_pdb": false,
        "has_min_available": false,
        "has_max_unavailable": false
      }
    ]
  },
  "suppressed": {
    "min_replicas": [],
    "min_ready_seconds": [],
    "readiness_probe": [],
    "pod_topology_distribution": [],
    "termination_grace_period": [],
    "docker_socket": [],
    "ingress_nginx_retirement": [],
    "pod_disruption_budgets": []
  },
  "service_limits": {
    "ec2_limits": [],
    "ebs_gp2_limits": [],
    "ebs_gp3_limits": []
  },
  "insights": {
    "upgrade_readiness": [],
    "misconfiguration": []
  }
}
